<resources>
    <string name="app_name">WeflixJava</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- String moved here -->
    <string name="tab_more_name">More</string>
    <string name="tab_movie_name">Movies</string>
    <string name="tab_tv_name">TV</string>
    <string name="tab_person_name">Person</string>

    <string name="place_holder_movie_name">JUDUL MOVIE</string>
    <string name="release_date_text">RELEASE DATE</string>
    <string name="genre_text">GENRES</string>
    <string name="rating_text">RATING</string>
    <string name="overview_text">Overview</string>
    <string name="user_review_text">User review</string>
    <string name="netflix_tag_line">Stories move us.\nThey make us feel more emotion, see new perspectives,\nand bring us closer to each other.</string>
    <string name="title_activity_youtube_player">YoutubePlayerActivity</string>
    <string name="error_message">Terjadi kesalahan, silahkan coba beberapa saat lagi</string>

    <string name="youtube_video_url">https://www.youtube.com/watch?v=</string>
    <string name="image_mdb_url">https://image.tmdb.org/t/p/w500/</string>
    <string name="youtube_query_trailer">Trailer </string>
    <string name="text_load_more_video">Load more movie</string>

    <string name="movies">movies</string>
    <string name="tv">tv</string>
    <string name="person">person</string>
</resources>